manifests/eck/install/es-route-insecure.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elasticsearch-sample-insecure
  namespace: elastic-system
spec:
  to:
    kind: Service
    name: elasticsearch-sample-es-http
